DeveloperOrg/force-app/main/default/objects/Department__c/fields/Average__c.field-meta.xml
<CustomField>
    <fullName>Average__c</fullName>
    <formula>Total_Sum_of_Students__c  /  Total_Student__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>