DeveloperOrg/force-app/main/default/objects/Department__c/fields/Related_Department__c.field-meta.xml
<CustomField>
    <fullName>Related_Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Department</label>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>Related Department</relationshipLabel>
    <relationshipName>Departments</relationshipName>
    <type>Lookup</type>
</CustomField>