DeveloperOrg/force-app/main/default/objects/Department__c/fields/Total_Student__c.field-meta.xml
<CustomField>
    <fullName>Total_Student__c</fullName>
    <label>Total Student</label>
    <summaryForeignKey>Student__c.Belonging_Department__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>