DeveloperOrg/force-app/main/default/objects/Department__c/fields/Total_Sum_of_Students__c.field-meta.xml
<CustomField>
    <fullName>Total_Sum_of_Students__c</fullName>
    <label>Total Sum of Students</label>
    <summarizedField>Student__c.Student_count__c</summarizedField>
    <summaryForeignKey>Student__c.Belonging_Department__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>